# quantum-approximate-optimization

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.py
config_scripts/: set_results_directory.py
quapopt/: __init__.py
quapopt/additional_packages/ancillary_functions_usra/: __init__.py  _efficient_math_cuda.py  ancillary_functions.py  efficient_math.py
quapopt/additional_packages/pysa/: ParallelTemperingRunner.py  __init__.py
quapopt/additional_packages/qokit/: __init__.py  dicke_state_utils.py  generator.py  labs.py  maxcut.py  parameter_utils.py  portfolio_optimization.py  qaoa_circuit_labs.py  qaoa_circuit_maxcut.py  qaoa_circuit_portfolio.py  qaoa_objective.py  qaoa_objective_labs.py  qaoa_objective_maxcut.py  qaoa_objective_portfolio.py  utils.py
quapopt/ancillary_functions/: __init__.py
quapopt/circuits/backend_utilities/: __init__.py
quapopt/circuits/brickwork/: gate_types.py
quapopt/circuits/gates/: __init__.py  gate_delays.py
quapopt/data_analysis/: __init__.py
quapopt/data_analysis/data_handling/: __init__.py  helper_functions.py
quapopt/data_analysis/visualization/: optimization_visualization.py
quapopt/hamiltonians/: __init__.py
quapopt/hamiltonians/generators/: LABSHamiltonianGenerator.py  RandomClassicalHamiltonianGeneratorBase.py  RandomErdosRenyiHamiltonianGenerator.py  RandomMAX2SATHamiltonianGenerator.py  RandomMaxCutHamiltonianGenerator.py  RandomRegularHamiltonianGenerator.py  RandomSherringtonKirkpatrickHamiltonianGenerator.py  RandomWishartHamiltonianGenerator.py  __init__.py
quapopt/hamiltonians/representation/: ClassicalHamiltonian.py  ClassicalHamiltonianBase.py  __init__.py  problem_formulations.py  transformations.py
quapopt/meta_algorithms/MultiLevel/: __init__.py
quapopt/meta_algorithms/NDAR/: NDARRunner.py  NDARRunnerQAOA.py  NDARRunnerQAOAQiskit.py  __init__.py
quapopt/meta_algorithms/QRR/: QRR_functions.py
quapopt/optimization/: __init__.py
quapopt/optimization/QAOA/: QAOARunnerBase.py  __init__.py
quapopt/optimization/classical_solvers/: RandomBitstringSampler.py  __init__.py
quapopt/optimization/parameter_setting/: __init__.py
scripts/: check_cuda.py  clean_up_pixi.py  set_results_directory.py
(+118 files in other folders)
